[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-orei-matrix"
description = "Home Assistant custom integration for Orei HDMI Matrix control"
version = "1.0.1"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "taysuus" }
]
keywords = ["home-assistant", "orei", "hdmi-matrix", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Home Assistant",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "homeassistant>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Repository = "https://github.com/Dresdn/hass-orei_matrix"
Issues = "https://github.com/Dresdn/hass-orei_matrix/issues"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "UP009",  # UTF-8 encoding declaration is unnecessary
    "SIM105", # Use contextlib.suppress
    "SIM117", # Merge multiple with statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
show_error_codes = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
